Incorrect points parameters values